# irclogger-viewer

./: .gitignore  Cargo.toml  README.md  config_example.json
src/: app.rs  config.rs  main.rs  reader.rs  route.rs  state.rs
templates/: base.html  channel_index.html  channel_lines.html  channel_search.html  index.html
